[gd_scene load_steps=9 format=2]

[ext_resource path="res://objetos interativos/sombra.gd" type="Script" id=1]
[ext_resource path="res://World/detalhesombra.png" type="Texture" id=2]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://tutoriais/bloco texto.png" type="Texture" id=4]
[ext_resource path="res://UI/PixelFont.tres" type="DynamicFont" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.67968, 4.27632 )

[sub_resource type="Animation" id=2]
resource_name = "1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/caixa dialogo area2d:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 193, -114 ), Vector2( 192, 112 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/RichTextLabel:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 120, -162 ), Vector2( 112, 85 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/proceed 1:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -144, 136 ), Vector2( 112, 120 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/quit:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 136 ), Vector2( 198, 120 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/proceed 2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -139, 191 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/RichTextLabel:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "You see something shining in the sewers.
" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/RichTextLabel:visible_characters")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/quit:text")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Ignore it" ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CanvasLayer/proceed 3:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -144, 48 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CanvasLayer/proceed 5:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -115, 102 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CanvasLayer/quit:rect_size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 74, 20 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("CanvasLayer/proceed 4:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -169, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:bbcode_text")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "You see something shining in the sewers.", "You see something shining in the sewers.
You get closer. It seems to be a metallic object. Smells bad." ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/RichTextLabel:percent_visible")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/proceed 1:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 112, 120 ), Vector2( 408, 144 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/quit:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Keep walking", "Don't touch it" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/proceed 2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -96, 164 ), Vector2( 112, 120 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/RichTextLabel:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "You get closer. It seems to be a metallic object. Smells bad." ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/quit:rect_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 80, 20 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/quit:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 195, 120 ) ]
}

[node name="sombra" type="StaticBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
frame = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 7.73959, 3.04 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="caixa dialogo area2d" type="Sprite" parent="CanvasLayer"]
position = Vector2( 192, 112 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 112.0
margin_top = 85.0
margin_right = 272.0
margin_bottom = 189.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "You see something shining in the sewers.
You get closer. It seems to be a metallic object. Smells bad."
text = "You get closer. It seems to be a metallic object. Smells bad."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="proceed 1" type="Button" parent="CanvasLayer"]
margin_left = 408.0
margin_top = 144.0
margin_right = 488.0
margin_bottom = 164.0
theme = ExtResource( 3 )
text = "Cool! Touch it"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="CanvasLayer"]
margin_left = 198.0
margin_top = 120.0
margin_right = 272.0
margin_bottom = 140.0
theme = ExtResource( 3 )
text = "Don't touch it"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="proceed 2" type="Button" parent="CanvasLayer"]
margin_left = 112.0
margin_top = 120.0
margin_right = 186.0
margin_bottom = 140.0
theme = ExtResource( 3 )
text = "Open the drain"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/1 = SubResource( 2 )
anims/2 = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="CanvasLayer/proceed 1" to="." method="_on_proceed_1_pressed"]
[connection signal="pressed" from="CanvasLayer/quit" to="." method="_on_quit_pressed"]
